--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build",
+    "build": "tsdx build --entry 'src/**/*.ts'",
     "test": "tsdx test",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
@@ -20,11 +20,6 @@
     "analyze": "size-limit --why"
   },
   "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
   "prettier": {
     "printWidth": 80,
     "semi": true,
@@ -48,7 +43,7 @@
     "@size-limit/preset-small-lib": "^4.9.1",
     "husky": "^4.3.6",
     "size-limit": "^4.9.1",
-    "tsdx": "^0.14.1",
+    "tsdx": "https://github.com/agilgur5/tsdx.git#dist-multi",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
   }
