--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.9.1",
+    "@types/jest": "^26.0.20",
     "husky": "^4.3.6",
     "size-limit": "^4.9.1",
     "tsdx": "https://github.com/agilgur5/tsdx.git#dist-multi",
