--- a/package.json
+++ b/package.json
@@ -44,8 +44,13 @@
     "@types/jest": "^26.0.20",
     "husky": "^4.3.6",
     "size-limit": "^4.9.1",
-    "tsdx": "https://github.com/agilgur5/tsdx.git#dist-multi",
+    "tsdx": "git+https://github.com/agilgur5/tsdx.git#dist-multi",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
+  },
+  "resolutions": {
+    "**/typescript": "^4.1.3",
+    "**/@typescript-eslint/eslint-plugin": "^4.1.3",
+    "**/@typescript-eslint/parser": "^4.1.3"
   }
 }
